# 0.22.0 (2022-09-XX)

  * color palette revamp (see https://github.com/lemmon/abrusco/blob/master/variables.css)

# 0.21.0 (2022-08-25)

  * (copy) apply to children only
  * (copy) drop div, add pre

# 0.20.0 (2022-05-31)

  * (grid) responsive gap, gapx, gapy
  * (grid) gap25, gap3, gap4
  * (grid) fix vh100
  * (grid) add mindvh, minsvh, minlvh
  * (grid) add inline-row
  * (type) noselect

# 0.19.0 (2022-01-28)

  * (grid) gap, gapx, gapy
  * (cursor) move
  * (copy) remove depreciated vars
  * (border) br to border-radius
  * (type) update rlh variables
    https://github.com/lemmon/abrusco/commit/f1895f0d02dea6cbeb8fbf3c6c2c96606fd9115b
    rlh1 -> n/a
    rlh2 -> rlh1
    rlh3 -> n/a
    rlh4 -> rlh2
    rlh5 -> rlh3
    rlh6 -> rlh4
  * (type) text-decoration-color

# 0.18.0 (2021-11-18)

  * (color, bg) add sat, lum classes by 5
  * (color, bg) white, black, gray hover states
  * (color, bg) accents now pass color as a variable
  * (type) tabular-nums
  * (border) .border, .border-XY, drop .bX
  * (cursor) .cursor-inherit
  * (type) --text-underline-offset

# 0.17.0 (2021-06-07)

  * (color) black, white as hsla
  * (margin) m[xy]0(25|5)
  * (border) .bc-XY -> .border-XY
  * (border) add sat, lum, alpha swatches
  * (variables) drop black, white 95-0125
  * (type) --text-decoration-thickness
  * (type) letter-spacing .lsh, .lsd
  * (type) line-height add .lh6 and .rlh6
  * (type) update headings font-size
  * (cursor) add text
  * (overflow) add clip
  * (div) --border-width, --border-color
  * (copy) depreciate global variables
  * (ellipsis) module init

# 0.16.2 (2021-04-26)

  * (inset) move from utils to modules

# 0.16.1 (2021-04-21)

  * (border) fix --border-width, --border-color
  * (div) depreciate --div-width, --div-color

# 0.16.0 (2021-04-07)

  * (type) .rlh root-line-height
  * (border) --border-width, --border-color update
  * (div) --div-width, --div-color
  * (grid) .justify-evenly
  * (visibility) fix .o05 -> .o5
  * (position) .inset