@@ -4738,7 +4738,9 @@ hr {
   color: var(--color);
 }
 
-.red {
+.red,
+.red\:hover:hover,
+.anchor:hover .red\:hover {
   --hue: var(--red-hue);
   --sat: var(--red-sat);
   --lum: var(--red-lum);
@@ -4747,7 +4749,9 @@ hr {
   color: var(--color);
 }
 
-.orange {
+.orange,
+.orange\:hover:hover,
+.anchor:hover .orange\:hover {
   --hue: var(--orange-hue);
   --sat: var(--orange-sat);
   --lum: var(--orange-lum);
@@ -4756,7 +4760,9 @@ hr {
   color: var(--color);
 }
 
-.yellow {
+.yellow,
+.yellow\:hover:hover,
+.anchor:hover .yellow\:hover {
   --hue: var(--yellow-hue);
   --sat: var(--yellow-sat);
   --lum: var(--yellow-lum);
@@ -4765,7 +4771,9 @@ hr {
   color: var(--color);
 }
 
-.green {
+.green,
+.green\:hover:hover,
+.anchor:hover .green\:hover {
   --hue: var(--green-hue);
   --sat: var(--green-sat);
   --lum: var(--green-lum);
@@ -4774,7 +4782,9 @@ hr {
   color: var(--color);
 }
 
-.teal {
+.teal,
+.teal\:hover:hover,
+.anchor:hover .teal\:hover {
   --hue: var(--teal-hue);
   --sat: var(--teal-sat);
   --lum: var(--teal-lum);
@@ -4783,7 +4793,9 @@ hr {
   color: var(--color);
 }
 
-.cyan {
+.cyan,
+.cyan\:hover:hover,
+.anchor:hover .cyan\:hover {
   --hue: var(--cyan-hue);
   --sat: var(--cyan-sat);
   --lum: var(--cyan-lum);
@@ -4792,7 +4804,9 @@ hr {
   color: var(--color);
 }
 
-.blue {
+.blue,
+.blue\:hover:hover,
+.anchor:hover .blue\:hover {
   --hue: var(--blue-hue);
   --sat: var(--blue-sat);
   --lum: var(--blue-lum);
@@ -4801,7 +4815,9 @@ hr {
   color: var(--color);
 }
 
-.indigo {
+.indigo,
+.indigo\:hover:hover,
+.anchor:hover .indigo\:hover {
   --hue: var(--indigo-hue);
   --sat: var(--indigo-sat);
   --lum: var(--indigo-lum);
@@ -4810,7 +4826,9 @@ hr {
   color: var(--color);
 }
 
-.purple {
+.purple,
+.purple\:hover:hover,
+.anchor:hover .purple\:hover {
   --hue: var(--purple-hue);
   --sat: var(--purple-sat);
   --lum: var(--purple-lum);
@@ -4819,7 +4837,9 @@ hr {
   color: var(--color);
 }
 
-.pink {
+.pink,
+.pink\:hover:hover,
+.anchor:hover .pink\:hover {
   --hue: var(--pink-hue);
   --sat: var(--pink-sat);
   --lum: var(--pink-lum);
@@ -4828,7 +4848,9 @@ hr {
   color: var(--color);
 }
 
-.ruby {
+.ruby,
+.ruby\:hover:hover,
+.anchor:hover .ruby\:hover {
   --hue: var(--ruby-hue);
   --sat: var(--ruby-sat);
   --lum: var(--ruby-lum);
@@ -5156,7 +5178,9 @@ hr {
   background-color: var(--bg-color);
 }
 
-.bg-red {
+.bg-red,
+.bg-red\:hover:hover,
+.anchor:hover .bg-red\:hover {
   --bg-hue: var(--red-hue);
   --bg-sat: var(--red-sat);
   --bg-lum: var(--red-lum);
@@ -5165,7 +5189,9 @@ hr {
   background-color: var(--bg-color);
 }
 
-.bg-orange {
+.bg-orange,
+.bg-orange\:hover:hover,
+.anchor:hover .bg-orange\:hover {
   --bg-hue: var(--orange-hue);
   --bg-sat: var(--orange-sat);
   --bg-lum: var(--orange-lum);
@@ -5174,7 +5200,9 @@ hr {
   background-color: var(--bg-color);
 }
 
-.bg-yellow {
+.bg-yellow,
+.bg-yellow\:hover:hover,
+.anchor:hover .bg-yellow\:hover {
   --bg-hue: var(--yellow-hue);
   --bg-sat: var(--yellow-sat);
   --bg-lum: var(--yellow-lum);
@@ -5183,7 +5211,9 @@ hr {
   background-color: var(--bg-color);
 }
 
-.bg-green {
+.bg-green,
+.bg-green\:hover:hover,
+.anchor:hover .bg-green\:hover {
   --bg-hue: var(--green-hue);
   --bg-sat: var(--green-sat);
   --bg-lum: var(--green-lum);
@@ -5192,7 +5222,9 @@ hr {
   background-color: var(--bg-color);
 }
 
-.bg-teal {
+.bg-teal,
+.bg-teal\:hover:hover,
+.anchor:hover .bg-teal\:hover {
   --bg-hue: var(--teal-hue);
   --bg-sat: var(--teal-sat);
   --bg-lum: var(--teal-lum);
@@ -5201,7 +5233,9 @@ hr {
   background-color: var(--bg-color);
 }
 
-.bg-cyan {
+.bg-cyan,
+.bg-cyan\:hover:hover,
+.anchor:hover .bg-cyan\:hover {
   --bg-hue: var(--cyan-hue);
   --bg-sat: var(--cyan-sat);
   --bg-lum: var(--cyan-lum);
@@ -5210,7 +5244,9 @@ hr {
   background-color: var(--bg-color);
 }
 
-.bg-blue {
+.bg-blue,
+.bg-blue\:hover:hover,
+.anchor:hover .bg-blue\:hover {
   --bg-hue: var(--blue-hue);
   --bg-sat: var(--blue-sat);
   --bg-lum: var(--blue-lum);
@@ -5219,7 +5255,9 @@ hr {
   background-color: var(--bg-color);
 }
 
-.bg-indigo {
+.bg-indigo,
+.bg-indigo\:hover:hover,
+.anchor:hover .bg-indigo\:hover {
   --bg-hue: var(--indigo-hue);
   --bg-sat: var(--indigo-sat);
   --bg-lum: var(--indigo-lum);
@@ -5228,7 +5266,9 @@ hr {
   background-color: var(--bg-color);
 }
 
-.bg-purple {
+.bg-purple,
+.bg-purple\:hover:hover,
+.anchor:hover .bg-purple\:hover {
   --bg-hue: var(--purple-hue);
   --bg-sat: var(--purple-sat);
   --bg-lum: var(--purple-lum);
@@ -5237,7 +5277,9 @@ hr {
   background-color: var(--bg-color);
 }
 
-.bg-pink {
+.bg-pink,
+.bg-pink\:hover:hover,
+.anchor:hover .bg-pink\:hover {
   --bg-hue: var(--pink-hue);
   --bg-sat: var(--pink-sat);
   --bg-lum: var(--pink-lum);
@@ -5246,7 +5288,9 @@ hr {
   background-color: var(--bg-color);
 }
 
-.bg-ruby {
+.bg-ruby,
+.bg-ruby\:hover:hover,
+.anchor:hover .bg-ruby\:hover {
   --bg-hue: var(--ruby-hue);
   --bg-sat: var(--ruby-sat);
   --bg-lum: var(--ruby-lum);
