@@ -1,6 +1,7 @@
 # 0.22.0 (2022-09-XX)
 
   * color palette revamp (see https://github.com/lemmon/abrusco/blob/master/variables.css)
+  * (color,background) accents hover states
 
 # 0.21.0 (2022-08-25)
 
